@@ -350,12 +350,16 @@
                           <string>Severity</string>
                         </tuple>
                         <tuple>
+                          <string>bug_difficulty_title</string>
+                          <string>Difficulty</string>
+                        </tuple>
+                        <tuple>
                           <string>bug_group_title</string>
                           <string>Group</string>
                         </tuple>
                         <tuple>
                           <string>translated_validation_state_title</string>
-                          <string>translated_validation_state_title</string>
+                          <string>Status</string>
                         </tuple>
                       </list>
                     </value>
@@ -401,6 +405,10 @@
                         <tuple>
                           <string>bug_severity_title</string>
                           <string>Severity</string>
+                        </tuple>
+                        <tuple>
+                          <string>bug_difficulty_title</string>
+                          <string>Difficulty</string>
                         </tuple>
                         <tuple>
                           <string>bug_group_title</string>
@@ -575,7 +583,7 @@
                         </tuple>
                         <tuple>
                           <string>translated_validation_state_title</string>
-                          <string>translated_validation_state_title</string>
+                          <string>Status</string>
                         </tuple>
                       </list>
                     </value>
