@@ -1,3 +1,7 @@
+2006-01-27
+* display "difficulty" column in bug tracker
+* correct title of "status" column in "more collumns" and "searchable"
+
 2006-01-17 yo
 * add upload stuff
 * update properties of portal types according to the new way
